<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Cadastro de Usuário"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nome_usuario"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edNomeUser"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_usuario"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sobrenome_usuario"
        app:layout_constraintStart_toStartOf="@+id/edNomeUser"
        app:layout_constraintTop_toBottomOf="@+id/edNomeUser" />

    <EditText
        android:id="@+id/edSobrenomeUser"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sobrenome_usuario_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/edDataNascimentoUser"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/data_nascimento_usuario_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/data_nascimento_usuario"
        app:layout_constraintStart_toStartOf="@+id/edSobrenomeUser"
        app:layout_constraintTop_toBottomOf="@+id/edSobrenomeUser" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/telefone_usuario"
        app:layout_constraintStart_toStartOf="@+id/edDataNascimentoUser"
        app:layout_constraintTop_toBottomOf="@+id/edDataNascimentoUser" />

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="500dp"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbSexoMasculinoUser"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/sexo_masculino" />

        <RadioButton
            android:id="@+id/rbSexoFemininoUser"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/sexo_feminino" />

        <RadioButton
            android:id="@+id/rbSexoNaoInformadoUser"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/sexo_nao_informado" />
    </RadioGroup>

    <Button
        android:id="@+id/btSalvarUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="salvarUsuario"
        android:text="@string/botao_salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btLimparUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="limparUsuario"
        android:text="@string/botao_limpar"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edTelefoneUser"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefone_usuario_hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/edEmailUser"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_usuario_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_usuario"
        app:layout_constraintStart_toStartOf="@+id/edTelefoneUser"
        app:layout_constraintTop_toBottomOf="@+id/edTelefoneUser" />


</androidx.constraintlayout.widget.ConstraintLayout>