<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaInicialActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="413dp"
        android:layout_height="25dp"
        android:layout_marginTop="100dp"
        android:text="@string/titulo_tela"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp"
        android:gravity="center_horizontal" />

    <Button
        android:onClick="telaMedicamentos"
        android:id="@+id/btMed"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginTop="150dp"
        android:text="@string/titulo_med"
        app:backgroundTint="#FFC107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="telaAlimentos"
        android:id="@+id/btAlim"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/titulo_alim"
        app:backgroundTint="#009688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMed" />

    <Button
        android:id="@+id/btCadastrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="telaUsuario"
        android:text="@string/infomar_meus_dados"
        app:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAlim" />

</androidx.constraintlayout.widget.ConstraintLayout>